--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Todo App</string>
+    <string name="textview">TextView</string>
+    <string name="todo">TODO</string>
 </resources>
