--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,20 @@
     <string name="app_name">Todo App</string>
     <string name="textview">TextView</string>
     <string name="todo">TODO</string>
+    <string name="edit_Description">Description</string>
+    <string name="edit_date">Date</string>
+    <string name="edit_is_complete">Completed</string>
+    <string name="edit_priority">Priority</string>
+    <string name="edit_high">High</string>
+    <string name="edit_medium">Medium</string>
+    <string name="edit_low">Low</string>
+    <string name="edit_save">Save</string>
+    <string name="cancel">Cancel</string>
+    <string name="edit_cancel_promt">Are you sure want to cancel edit?</string>
+    <string name="crud_save">Task Added</string>
+    <string name="crud_update">Task Updated</string>
+    <string name="edit_update">Update</string>
+    <string name="ok">Ok</string>
+
+
 </resources>
