Method for share is added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,7 @@
     <string name="crud_update">Task Updated</string>
     <string name="edit_update">Update</string>
     <string name="ok">Ok</string>
+    <string name="share">Share</string>
 
 
 </resources>
